--- a/PurBeurre/Pipfile
+++ b/PurBeurre/Pipfile
@@ -9,14 +9,12 @@ verify_ssl = true
 django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
-mysqlclient = "*"
 requests = "*"
-psycopg2 = "*"
+psycopg2-binary = "*"
 pytest = "*"
 pytest-django = "*"
 selenium = "*"
 model-bakery = "*"
-pprint = "*"
 flake8 = "*"
 freeze = "*"
 gunicorn = "*"
@@ -26,5 +24,3 @@ whitenoise = "*"
 pip = "*"
 pytest-cov = "*"
 
-[requires]
-python_version = "3.7"
