--- a/PurBeurre/.travis.yml
+++ b/PurBeurre/.travis.yml
@@ -5,7 +5,7 @@ python:
 before_script:
   - pip3 install -r requirements.txt
 
-env: DJANGO_SETTINGS_MODULE="disquaire_project.settings"
+env: DJANGO_SETTINGS_MODULE="purbeurre.settings"
 
 services:
   - postgresql
