--- a/PurBeurre/.travis.yml
+++ b/PurBeurre/.travis.yml
@@ -1,6 +1,7 @@
-language: python
-python:
-  - '3.6'
+---
+language:
+  python:
+    - '3.6'
 
 before_script:
   - pip3 install -r requirements.txt
