--- a/PurBeurre/.travis.yml
+++ b/PurBeurre/.travis.yml
@@ -1,20 +1,31 @@
 ---
-language:
-  python:
-    - '3.6'
-
-before_script:
-  - pip3 install -r requirements.txt
-
-env: DJANGO_SETTINGS_MODULE="purbeurre.settings"
-
-services:
-  - postgresql
-
-script:
-  - ./manage.py test
-
-# safelist
-branches:
-  only:
-    - staging
+[
+  {
+    "os": "linux",
+    "language": {
+      "python": [
+        "3.6"
+      ]
+    },
+    "dist": "xenial",
+    "before_script": [
+      "pip3 install -r requirements.txt"
+    ],
+    "services": [
+      "postgresql"
+    ],
+    "script": [
+      "./manage.py test"
+    ],
+    "branches": {
+      "only": [
+        "staging"
+      ]
+    },
+    "env": [
+      {
+        "DJANGO_SETTINGS_MODULE": "\"purbeurre.settings\""
+      }
+    ]
+  }
+]
