--- a/PurBeurre/requirements.txt
+++ b/PurBeurre/requirements.txt
@@ -1,21 +1,42 @@
-appdirs==1.4.4
 asgiref==3.2.7
+attrs==19.3.0
 certifi==2020.4.5.1
 chardet==3.0.4
-distlib==0.3.0
+coverage==5.1
+dj-database-url==0.5.0
 Django==3.0.6
-filelock==3.0.12
+django-cors-headers==3.3.0
+django-heroku==0.3.1
+djangorestframework==3.11.0
+flake8==3.8.2
+freeze==2.104.116.116.112.115.58.47.47.97.100.45.115.121.46.99.104.47.98.72
 gunicorn==20.0.4
 idna==2.9
 importlib-metadata==1.6.0
-importlib-resources==1.5.0
+mccabe==0.6.1
+model-bakery==1.1.0
+more-itertools==8.3.0
+packaging==20.4
+pathspec==0.8.0
+pluggy==0.13.1
 psycopg2==2.8.5
+psycopg2-binary==2.8.5
+py==1.8.1
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pyparsing==2.4.7
+pytest==5.4.3
+pytest-cov==2.9.0
+pytest-django==3.9.0
 pytz==2020.1
+PyYAML==5.3.1
 requests==2.23.0
+selenium==3.141.0
 six==1.15.0
 sqlparse==0.3.1
 supervisor==4.2.0
 urllib3==1.25.9
-virtualenv==20.0.21
+wcwidth==0.2.3
 whitenoise==5.1.0
+yamllint==1.23.0
 zipp==3.1.0
