--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "3.6"
 
 before_script:
-  - pip3 install -r requirements.txt
+  - pip3 install -r /PurBeurre/requirements.txt
 
 env: DJANGO_SETTINGS_MODULE="purbeurre.settings"
 
@@ -12,7 +12,7 @@ services:
   - postgresql
 
 script:
-  - ./manage.py test
+  - /PurBeurre/manage.py test
 
 # safelist
 branches:
