--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ language: python
 python: 
   - "3.6"
 
-install:
+before_script:
   - pip3 install -r ./PurBeurre/requirements.txt
 
-env: DJANGO_SETTINGS_MODULE="purbeurre.settings"
+env: DJANGO_SETTINGS_MODULE="PurBeurre.settings"
 
 services:
   - postgresql
