--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 ---
 before_install:
   - chmod +x ./PurBeurre/manage.py
-  - cd ./Purbeurre 
-language: python:
+  - cd ./Purbeurre
+language: python
+python:
   - "3.6"
 
-before_script: 
+before_script:
   - pip3 install -r requirements.txt
 
 env: DJANGO_SETTINGS_MODULE="PurBeurre.settings"
