--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ---
 before_install:
   - chmod +x ./PurBeurre/manage.py
-  - cd ./Purbeurre
+  - cd ./PurBeurre
 language: python
 python:
   - "3.6"
