--- a/PurBeurre/requirements.txt
+++ b/PurBeurre/requirements.txt
@@ -1,42 +1,69 @@
+appdirs==1.4.4
 asgiref==3.2.7
-attrs==19.3.0
+asn1crypto==0.24.0
+attrs==17.4.0
+Automat==0.6.0
+blinker==1.4
 certifi==2020.4.5.1
 chardet==3.0.4
-coverage==5.1
-dj-database-url==0.5.0
+chromedriver-binary==84.0.4147.30.0
+click==6.7
+cloud-init==19.2
+colorama==0.3.7
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==2.1.4
+distlib==0.3.0
+distro-info===0.18ubuntu0.18.04.1
 Django==3.0.6
-django-cors-headers==3.3.0
-django-heroku==0.3.1
-djangorestframework==3.11.0
-flake8==3.8.2
-freeze==2.104.116.116.112.115.58.47.47.97.100.45.115.121.46.99.104.47.98.72
-gunicorn==20.0.4
-idna==2.9
+filelock==3.0.12
+httplib2==0.9.2
+hyperlink==17.3.1
+idna==2.6
 importlib-metadata==1.6.0
-mccabe==0.6.1
-model-bakery==1.1.0
-more-itertools==8.3.0
-packaging==20.4
+importlib-resources==1.5.0
+incremental==16.10.1
+Jinja2==2.10
+jsonpatch==1.16
+jsonpointer==1.10
+jsonschema==2.6.0
+keyring==10.6.0
+keyrings.alt==3.0
+language-selector==0.1
+MarkupSafe==1.0
+netifaces==0.10.4
+oauthlib==2.0.6
+PAM==0.4.2
 pathspec==0.8.0
-pluggy==0.13.1
-psycopg2==2.8.5
+pipenv==2020.5.28
 psycopg2-binary==2.8.5
-py==1.8.1
-pycodestyle==2.6.0
-pyflakes==2.2.0
-pyparsing==2.4.7
-pytest==5.4.3
-pytest-cov==2.9.0
-pytest-django==3.9.0
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycrypto==2.6.1
+pygobject==3.26.1
+PyJWT==1.5.3
+pyOpenSSL==17.5.0
+pyserial==3.4
+python-apt==1.6.5+ubuntu0.2
+python-debian==0.1.32
 pytz==2020.1
-PyYAML==5.3.1
-requests==2.23.0
-selenium==3.141.0
+pyxdg==0.25
+PyYAML==3.12
+requests==2.18.4
+requests-unixsocket==0.1.5
+SecretStorage==2.3.1
+service-identity==16.0.0
 six==1.15.0
 sqlparse==0.3.1
-supervisor==4.2.0
-urllib3==1.25.9
-wcwidth==0.2.3
-whitenoise==5.1.0
+ssh-import-id==5.7
+systemd-python==234
+Twisted==17.9.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.22
+virtualenv==20.0.21
+virtualenv-clone==0.5.4
 yamllint==1.23.0
 zipp==3.1.0
+zope.interface==4.3.2
