--- a/PurBeurre/Pipfile
+++ b/PurBeurre/Pipfile
@@ -18,7 +18,6 @@ model-bakery = "*"
 flake8 = "*"
 freeze = "*"
 gunicorn = "*"
-django-heroku = "*"
 dj-database-url = "*"
 whitenoise = "*"
 pip = "*"
@@ -26,3 +25,5 @@ pytest-cov = "*"
 psycopg2 = "*"
 supervisor = "*"
 yamllint = "*"
+chromedriver-binary = "*"
+jsonpatch = "*"
