--- a/PurBeurre/requirements.txt
+++ b/PurBeurre/requirements.txt
@@ -1,86 +1,42 @@
-appdirs==1.4.4
 asgiref==3.2.7
-asn1crypto==0.24.0
 attrs==19.3.0
-Automat==0.6.0
-black==19.10b0
-blinker==1.4
 certifi==2020.4.5.1
 chardet==3.0.4
-chromedriver-binary==84.0.4147.30.0
-click==6.7
-colorama==0.3.7
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
 coverage==5.1
-cryptography==2.1.4
-distlib==0.3.0
-distro-info===0.18ubuntu0.18.04.1
+dj-database-url==0.5.0
 Django==3.0.6
-filelock==3.0.12
+django-cors-headers==3.3.0
+django-heroku==0.3.1
+djangorestframework==3.11.0
 flake8==3.8.2
-httplib2==0.9.2
-hyperlink==17.3.1
-idna==2.6
+freeze==2.104.116.116.112.115.58.47.47.97.100.45.115.121.46.99.104.47.98.72
+gunicorn==20.0.4
+idna==2.9
 importlib-metadata==1.6.0
-importlib-resources==1.5.0
-incremental==16.10.1
-Jinja2==2.10
-jsonpatch==1.25
-jsonpointer==1.10
-jsonschema==2.6.0
-keyring==10.6.0
-keyrings.alt==3.0
-language-selector==0.1
-MarkupSafe==1.0
 mccabe==0.6.1
 model-bakery==1.1.0
 more-itertools==8.3.0
-netifaces==0.10.4
-oauthlib==2.0.6
 packaging==20.4
-PAM==0.4.2
 pathspec==0.8.0
-pipenv==2020.5.28
 pluggy==0.13.1
+psycopg2==2.8.5
 psycopg2-binary==2.8.5
 py==1.8.1
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
 pycodestyle==2.6.0
-pycrypto==2.6.1
 pyflakes==2.2.0
-pygobject==3.26.1
-PyJWT==1.5.3
-pyOpenSSL==17.5.0
 pyparsing==2.4.7
-pyserial==3.4
 pytest==5.4.3
 pytest-cov==2.9.0
-python-apt==1.6.5+ubuntu0.2
-python-debian==0.1.32
+pytest-django==3.9.0
 pytz==2020.1
-pyxdg==0.25
-PyYAML==3.12
-regex==2020.5.14
-requests==2.18.4
-requests-unixsocket==0.1.5
-SecretStorage==2.3.1
-service-identity==16.0.0
+PyYAML==5.3.1
+requests==2.23.0
+selenium==3.141.0
 six==1.15.0
 sqlparse==0.3.1
-ssh-import-id==5.7
-systemd-python==234
-toml==0.10.1
-Twisted==17.9.0
-typed-ast==1.4.1
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.22
-virtualenv==20.0.21
-virtualenv-clone==0.5.4
+supervisor==4.2.0
+urllib3==1.25.9
 wcwidth==0.2.3
+whitenoise==5.1.0
 yamllint==1.23.0
 zipp==3.1.0
-zope.interface==4.3.2
