--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,11 @@ python:
 
 before_script:
   - pip3 install -r requirements.txt
-  - curl -s "https://chromedriver.storage.googleapis.com/84.0.4147.30"
-  - curl "https://chromedriver.storage.googleapis.com/${84.0.4147.30}/chromedriver_linux64.zip" -O env: 
+  - LATEST_CHROMEDRIVER_VERSION=`curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE"`
+  - curl "https://chromedriver.storage.googleapis.com/${LATEST_CHROMEDRIVER_VERSION}/chromedriver_linux64.zip" -O
+  - unzip chromedriver_linux64.zip -d ~/bin
+
+env: 
 DJANGO_SETTINGS_MODULE="PurBeurre.settings"
   - unzip chromedriver_linux64.zip -d ~/bin
 
