--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,7 @@ before_script:
   - curl "https://chromedriver.storage.googleapis.com/${LATEST_CHROMEDRIVER_VERSION}/chromedriver_linux64.zip" -O
   - unzip chromedriver_linux64.zip -d ~/bin
 
-env: 
-DJANGO_SETTINGS_MODULE="PurBeurre.settings"
-  - unzip chromedriver_linux64.zip -d ~/bin
+env: DJANGO_SETTINGS_MODULE="PurBeurre.settings"
 
 services:
   - postgresql
