--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ addons:
   chrome: stable
   firefox: latest
 
+services:
+  - xvfb
+
 before_script:
   - pip3 install -r requirements.txt
   - wget https://chromedriver.storage.googleapis.com/84.0.4147.30/chromedriver_linux64.zip
