--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ addons:
 before_script:
   - pip3 install -r requirements.txt
   - wget https://chromedriver.storage.googleapis.com/84.0.4147.30/chromedriver_linux64.zip
-  - unzip chromedriver_linux64.zip /home/travis/.wdm/drivers/chromedriver/84.0.4147.30/linux64/chromedriver.zip
+  - unzip chromedriver_linux64.zip -d ~/home/travis/.wdm/drivers/chromedriver/84.0.4147.30/linux64/
   - export CHROME_BIN=chromium-browser
 
 env: DJANGO_SETTINGS_MODULE="PurBeurre.settings"
