copy of valid P8

--- a/PurBeurre/Pipfile
+++ b/PurBeurre/Pipfile
@@ -9,22 +9,23 @@ verify_ssl = true
 django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+mysqlclient = "*"
 requests = "*"
-psycopg2-binary = "*"
+psycopg2 = "*"
 pytest = "*"
 pytest-django = "*"
 selenium = "*"
 model-bakery = "*"
+pprint = "*"
 flake8 = "*"
 freeze = "*"
 gunicorn = "*"
+django-heroku = "*"
 dj-database-url = "*"
 whitenoise = "*"
 pip = "*"
 pytest-cov = "*"
-psycopg2 = "*"
-supervisor = "*"
-yamllint = "*"
-chromedriver-binary = "*"
-jsonpatch = "*"
-webdriver-manager = "*"
+django-crispy-forms = "*"
+
+[requires]
+python_version = "3.7"
