--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,11 @@ before_script:
   - unzip chromedriver_linux64.zip -d ~/
   - export CHROME_BIN=chromium-browser
 
+after_failure:
+  - if [ -f tests/tests.log ]; then cat tests/tests.log && sleep 10; fi
+  - echo == End of test log ==
+
+
 env: DJANGO_SETTINGS_MODULE="PurBeurre.settings"
 
 services:
