--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,11 @@ addons:
   chrome: stable
   firefox: latest
 
+before_install:
+  - # start your web application and listen on `localhost`
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+
+
 before_script:
   - pip3 install -r requirements.txt
   - wget https://chromedriver.storage.googleapis.com/84.0.4147.30/chromedriver_linux64.zip
