--- a/PurBeurre/Pipfile
+++ b/PurBeurre/Pipfile
@@ -28,6 +28,7 @@ django-crispy-forms = "*"
 raven = "*"
 sentry-sdk = "*"
 aiocontextvars = "*"
+webdriver-manager = "*"
 
 [requires]
 python_version = "3.7"
