--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,15 @@ python:
   - "3.6"
 
 addons:
-  chrome: stable
+  chrome: stable 
 
 before_script:
   - pip3 install -r requirements.txt
-
+  - psql -c "CREATE DATABASE purbeurre;" -U postgres
+  - psql -c "CREATE USER root WITH PASSWORD 'Hamzamal89'-U postgres
+  - python manage.py makemigrations
+  - python manage.py migrate
+  - python manage.py fill_db
 
 
 env: DJANGO_SETTINGS_MODULE="PurBeurre.settings"
