--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ addons:
 before_script:
   - pip3 install -r requirements.txt
   - psql -c "CREATE DATABASE purbeurre;" -U postgres
-  - psql -c "CREATE USER root WITH PASSWORD 'Hamzamal89'-U postgres
+  - psql -c "CREATE USER root WITH PASSWORD 'Hamzamal89';" -U postgres
   - python manage.py makemigrations
   - python manage.py migrate
   - python manage.py fill_db
