--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ addons:
 
 before_script:
   - pip3 install -r requirements.txt
-  - psql -c "CREATE DATABASE purbeurre;" -U postgres
-  - psql -c "CREATE USER root WITH PASSWORD 'Hamzamal89';" -U postgres
+  - sudo psql -c "CREATE DATABASE purbeurre;" -U postgres
+  - sudo psql -c "CREATE USER root WITH PASSWORD 'Hamzamal89';" -U postgres
   - python manage.py makemigrations
   - python manage.py migrate
   - python manage.py fill_db
