--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ addons:
 
 before_script:
   - pip3 install -r requirements.txt
-  - sudo psql -c "CREATE DATABASE purbeurre;" -U postgres
-  - sudo psql -c "CREATE USER root WITH PASSWORD 'Hamzamal89';" -U postgres
-  - postgres=# ALTER USER root WITH SUPERUSER; ALTER ROLE 
+  - psql -c "CREATE DATABASE purbeurre;" -U postgres
+  - psql -c "CREATE USER root WITH PASSWORD 'Hamzamal89';" -U postgres
+  - psql -c "ALTER USER root WITH SUPERUSER"; -U postgres 
   - python manage.py makemigrations
   - python manage.py migrate
   - python manage.py fill_db
