--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ python:
 addons:
   chrome: stable 
 
+services:
+  - postgresql
+
 before_script:
   - pip3 install -r requirements.txt
   - psql -c "CREATE DATABASE purbeurre;" -U postgres
