--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ services:
 before_script:
   - pip3 install -r requirements.txt
   - psql -c "CREATE DATABASE purbeurre;" -U postgres
-  - psql -c "CREATE USER root WITH PASSWORD 'Hamzamal89';" -U postgres
-  - psql -c "ALTER USER root WITH SUPERUSER"; -U postgres 
+  - psql -c "CREATE ROLE root SUPERUSER LOGIN CREATEDB;" -U postgres
   - python manage.py makemigrations
   - python manage.py migrate
   - python manage.py fill_db
