--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_script:
   - pip3 install -r requirements.txt
   - psql -c "CREATE DATABASE purbeurre;" -U postgres
   - psql -c "CREATE ROLE root SUPERUSER LOGIN CREATEDB;" -U postgres
+  - psql -c "CREATE USER MyCousin WITH PASSWORD 'Niam1989' WITH EMAIL 'monami@gmail.com'"
   - python manage.py makemigrations
   - python manage.py migrate
   - python manage.py fill_db
