--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
   - pip3 install -r requirements.txt
   - psql -c "CREATE DATABASE purbeurre;" -U postgres
   - psql -c "CREATE ROLE root SUPERUSER LOGIN CREATEDB;" -U postgres
-  - psql -c "CREATE USER MyCousin WITH PASSWORD 'Niam1989' EMAIL 'monami@gmail.com'"
+  - psql -c "INSERT INTO public.auth_user(password, last_login, is_superuser, username, first_name, last_name, email, is_staff, is_active, date_joined)	VALUES ('Niam1989', null, false, 'LeUsernameTest', 'David', 'Joseph', 'monami@gmail.com', false, true, '2020-05-08 21:38:12.033215+00')"
   - python manage.py makemigrations
   - python manage.py migrate
   - python manage.py fill_db
