--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
   - psql -c "CREATE ROLE root SUPERUSER LOGIN CREATEDB;" -U postgres
   - python manage.py makemigrations
   - python manage.py migrate
-  - psql -c "INSERT INTO public.auth_user(password, last_login, is_superuser, username, first_name, last_name, email, is_staff, is_active, date_joined)	VALUES ('Niam1989', null, false, 'LeUsernameTest', 'David', 'Joseph', 'monami@gmail.com', false, true, '2020-05-08 21:38:12.033215+00')"
+  - psql -c "INSERT INTO auth_user(password, last_login, is_superuser, username, first_name, last_name, email, is_staff, is_active, date_joined)	VALUES ('Niam1989', null, false, 'LeUsernameTest', 'David', 'Joseph', 'monami@gmail.com', false, true, '2020-05-08 21:38:12.033215+00')"
   - python manage.py fill_db
 
 
