--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,6 @@ before_install:
   - wget https://chromedriver.storage.googleapis.com/84.0.4147.30/chromedriver_linux64.zip
   - unzip chromedriver_linux64.zip -d ~/
   - export CHROME_BIN=chromium-browser
-  - psql -c "CREATE DATABASE purbeurre;" -U postgres
-  - psql -c "CREATE ROLE root SUPERUSER LOGIN CREATEDB;" -U postgres
-  - python manage.py makemigrations foodfacts
-  - python manage.py migrate
-  - psql -c "INSERT INTO auth_user(password, last_login, is_superuser, username, first_name, last_name, email, is_staff, is_active, date_joined)	VALUES ('Niam1989', null, false, 'LeUsernameTest', 'David', 'Joseph', 'monami@gmail.com', false, true, '2020-05-08 21:38:12.033215+00')"
-  - psql -c "SELECT table_name FROM information_schema.tables WHERE table_schema = 'public' ORDER BY table_name;"
-  - python manage.py fill_db
 
 language: python
 python:
@@ -26,6 +19,13 @@ services:
 
 before_script:
   - pip3 install -r requirements.txt
+  - psql -c "CREATE DATABASE purbeurre;" -U postgres
+  - psql -c "CREATE ROLE root SUPERUSER LOGIN CREATEDB;" -U postgres
+  - python manage.py makemigrations
+  - python manage.py migrate
+  - psql -c "INSERT INTO auth_user(password, last_login, is_superuser, username, first_name, last_name, email, is_staff, is_active, date_joined)	VALUES ('Niam1989', null, false, 'LeUsernameTest', 'David', 'Joseph', 'monami@gmail.com', false, true, '2020-05-08 21:38:12.033215+00')"
+  - psql -c "SELECT table_name FROM information_schema.tables WHERE table_schema = 'public' ORDER BY table_name;"
+  - python manage.py fill_db
 
 
 
