--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_script:
 env: DJANGO_SETTINGS_MODULE="PurBeurre.settings"
 
 script:
-  - python manage.py makemigrations
+  - python manage.py makemigrations foodfacts --traceback foodfacts -settings PurBeurre.settings -v 3 
   - python manage.py migrate
   - python manage.py fill_db
   - python manage.py test
