--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ before_script:
 env: DJANGO_SETTINGS_MODULE="PurBeurre.settings"
 
 script:
-  - python manage.py makemigrations foodfacts --traceback foodfacts -settings PurBeurre.settings -v 3 
-  - python manage.py migrate
+  - python manage.py makemigrations 
+  - python manage.py migrate --fake-initial
   - python manage.py fill_db
   - python manage.py test
 
