--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,6 @@ services:
 before_script:
   - pip3 install -r requirements.txt
   - psql -c "create database purbeurre;" -U postgres
-  - psql -c "CREATE ROLE root SUPERUSER LOGIN CREATEDB;" -U postgres
 
 
 env: DJANGO_SETTINGS_MODULE="PurBeurre.settings"
@@ -32,7 +31,7 @@ script:
   - psql -c "SELECT table_name FROM information_schema.tables WHERE table_schema = 'public' ORDER BY table_name;" 
   - psql -c "INSERT INTO auth_user(password, last_login, is_superuser, username, first_name, last_name, email, is_staff, is_active, date_joined)	VALUES ('Niam1989', null, false, 'LeUsernameTest', 'David', 'Joseph', 'monami@gmail.com', false, true, '2020-05-08 21:38:12.033215+00')" 
   - python manage.py fill_db
-  - python manage.py test
+  - python manage.py test -k
 
 # safelist
 branches:
