--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ env: DJANGO_SETTINGS_MODULE="PurBeurre.settings"
 script:
   - python manage.py makemigrations
   - python manage.py showmigrations 
-  - python manage.py migrate --fake
+  - python manage.py migrate
   - psql -c "SELECT table_name FROM information_schema.tables WHERE table_schema = 'public' ORDER BY table_name;" 
   - psql -c "INSERT INTO auth_user(password, last_login, is_superuser, username, first_name, last_name, email, is_staff, is_active, date_joined)	VALUES ('Niam1989', null, false, 'LeUsernameTest', 'David', 'Joseph', 'monami@gmail.com', false, true, '2020-05-08 21:38:12.033215+00')" 
   - python manage.py fill_db
