--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,12 @@ before_install:
   - unzip chromedriver_linux64.zip -d ~/
   - export CHROME_BIN=chromium-browser
 
-language: python
-python:
-  - "3.6"
+matrix:
+  include:
+    - language: python
+      python: "3.6"
+
+    - language: bash
 
 addons:
   chrome: stable 
@@ -25,7 +28,7 @@ before_script:
   - psql -c "ALTER USER root WITH PASSWORD 'Hamzamal89'";
   - psql -c "CREATE DATABASE purbeurre WITH OWNER = root ENCODING = 'UTF8'CONNECTION LIMIT = -1;"
   - cat data.json | sed 's/"/""/g' | cat <(echo '"') - <(echo '"') | psql -c 'COPY import(data) FROM STDIN (FORMAT CSV)'
-  - python manage.py makemigrations
+  - bash python manage.py makemigrations
   - python manage.py showmigrations
   - python manage.py migrate auth
   - python manage.py migrate
