--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,10 @@ before_install:
   - unzip chromedriver_linux64.zip -d ~/
   - export CHROME_BIN=chromium-browser
 
-matrix:
-  include:
-    - language: python
-      python: "3.6"
+language: python
 
-    - language: bash
+python:
+  - "3.6"
 
 addons:
   chrome: stable 
