--- a/.travis.yml
+++ b/.travis.yml
@@ -25,19 +25,11 @@ before_script:
   - psql -c "CREATE ROLE root SUPERUSER LOGIN CREATEDB";
   - psql -c "ALTER USER root WITH PASSWORD 'Hamzamal89'";
   - psql -c "CREATE DATABASE purbeurre WITH OWNER = root ENCODING = 'UTF8'CONNECTION LIMIT = -1;"
-  - bash cat data.json | sed 's/"/""/g' | cat <(echo '"') - <(echo '"') | psql -c 'COPY import(data) FROM STDIN (FORMAT CSV)'
-  - python manage.py makemigrations
-  - python manage.py showmigrations
-  - python manage.py migrate auth
-  - python manage.py migrate
+  - psql purbeurre < data.json
   - psql -c "SELECT table_name FROM information_schema.tables WHERE table_schema = 'public' ORDER BY table_name;"
 
 
 script:
-  - python manage.py migrate auth
-  - psql -c "SELECT table_name FROM information_schema.tables WHERE table_schema = 'public' ORDER BY table_name;"
-  - python manage.py migrate auth
-  - psql -c "INSERT INTO public.auth_user(password, last_login, is_superuser, username, first_name, last_name, email, is_staff, is_active, date_joined)	VALUES ('Niam1989', null, false, 'LeUsernameTest', 'David', 'Joseph', 'monami@gmail.com', false, true, '2020-05-08 21:38:12.033215+00');"
   - python manage.py fill_db
   - python manage.py test -k
 
