--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ before_script:
   - psql -c "ALTER USER root WITH PASSWORD 'Hamzamal89'";
   - psql -c "CREATE DATABASE purbeurre WITH OWNER = root ENCODING = 'UTF8'CONNECTION LIMIT = -1;"
   - psql purbeurre < data.sql
+  - python manage.py makemigrations foodfacts
+  - python manage.py migrate
   - psql -c "SELECT table_name FROM information_schema.tables WHERE table_schema = 'public' ORDER BY table_name;"
 
 
