--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ addons:
   chrome: stable 
 
 services:
-  - postgresql
+  - postgresql: "12.3"
 
 env: DJANGO_SETTINGS_MODULE="PurBeurre.settings"
 
