--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ python:
 addons:
   chrome: stable
   postgresql: "12.3"
+  apt:
+    packages:
+    - postgresql-12.3
+    - postgresql-client-12.3
 
 services:
   - postgresql
