--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ env:
 
 before_script:
   - pip3 install -r requirements.txt
-  - psql -c "CREATE DATABASE purbeurre;" -U postgres
+  - psql -c 'create database purbeurre;' -U postgres
   - psql purbeurre < herokubase.sql
   - psql purbeurre -c "SELECT table_name FROM information_schema.tables WHERE table_schema = 'public' ORDER BY table_name;"
   - psql purbeurre -c "INSERT INTO public.auth_user(password, last_login, is_superuser, username, first_name, last_name, email, is_staff, is_active, date_joined) VALUES ('Niam1989', '2020-06-27 17:07:45.81932+00', false, 'BigFriend90s', 'Robert', 'Engels', 'monami@gmail.com', false, true, '2020-05-27 17:07:45.81932+00');"
