--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ env:
 
 before_script:
   - pip3 install -r requirements.txt
-  - psql -c 'create database purbeurre' -U postgres
+  - psql -c "CREATE DATABASE purbeurre WITH OWNER = postgres ENCODING = 'UTF8' CONNECTION LIMIT = -1;"
 
 script:
   - python manage.py fill_db
