--- a/.travis.yml
+++ b/.travis.yml
@@ -25,13 +25,10 @@ services:
 
 env:
   global:
-    - DJANGO_SETTINGS_MODULE="PurBeurre.settings"
-    - PGPORT=5433
-    - PGUSER=postgres
+    - DJANGO_SETTINGS_MODULE=settings.travis
 
 before_script:
   - pip3 install -r requirements.txt
-  - psql -c "CREATE DATABASE purbeurre WITH OWNER = postgres ENCODING = 'UTF8' CONNECTION LIMIT = -1;"
 
 script:
   - python manage.py fill_db
