--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ services:
 
 env:
   global:
-    - DJANGO_SETTINGS_MODULE=PurBeurre.settings.travis
+    - DJANGO_SETTINGS_MODULE=PurBeurre.settings
 
 before_script:
   - pip3 install -r requirements.txt
