--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,11 @@ env:
 
 before_script:
   - pip3 install -r requirements.txt
+  - psql -c "CREATE ROLE root SUPERUSER LOGIN CREATEDB";
+  - psql -c "CREATE DATABASE purbeurre WITH OWNER = root ENCODING = 'UTF8' CONNECTION LIMIT = -1;"
+  - psql -c "ALTER USER root WITH PASSWORD 'Hamzamal89'";
+  - psql purbeurre < herokubase.sql
+
 
 script:
   - python manage.py test
