updating requirements and pipfiles

--- a/PurBeurre/Pipfile
+++ b/PurBeurre/Pipfile
@@ -15,7 +15,6 @@ pytest = "*"
 pytest-django = "*"
 selenium = "*"
 model-bakery = "*"
-pprint = "*"
 flake8 = "*"
 freeze = "*"
 gunicorn = "*"
@@ -29,6 +28,7 @@ raven = "*"
 sentry-sdk = "*"
 aiocontextvars = "*"
 webdriver-manager = "*"
+django-keys = "*"
 
 [requires]
 python_version = "3.7"
