--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ env:
     - PGPORT=5433
 
 before_script:
+  - pip3 install django-keys
   - pip3 install -r requirements.txt
   - python3 -m djangokeys --length 60 > secret.key
   - psql -c "CREATE ROLE root SUPERUSER LOGIN CREATEDB";
