--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ env:
 before_script:
   - pip3 install django-keys
   - pip3 install -r requirements.txt
+  - python3 -m djangokeys --length 60 > secret.key
 
 
 script:
