--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ services:
 
 env:
   global:
-    - DJANGO_SETTINGS_MODULE="PurBeurre.settings"
+    - DJANGO_SETTINGS_MODULE="settings"
     - PGPORT=5433
 
 before_script:
